include_directories(Head)

add_executable(BiTree01 BiTree01.cpp Head/SeqBiTree.h Head/LinkBiTree.h)
add_executable(BiTree02 BiTree02.cpp Head/InBiThrTree.h)
add_executable(ChildBrotherTree01 ChildBrotherTree01.cpp Head/ChildBrotherTree.h)
add_executable(HuffmanTree01 HuffmanTree01.cpp Head/HuffmanTree.h)